fixed aligning issue with form inputs

--- a/styles/style.css
+++ b/styles/style.css
@@ -56,13 +56,19 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: flex-end;
   height: 100%;
   gap: 2rem;
   padding: 2rem 2rem 1rem;
   border: 1px solid black;
 }
 
+.form input {
+  margin-right: 0;
+}
+
 .form button {
+  margin: 0 4rem;
   padding: 0.5rem 1rem;
   background-color: rgb(255, 216, 44);
   border: none;
